--- a/assets/css/pages/index.css
+++ b/assets/css/pages/index.css
@@ -52,6 +52,7 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    padding: 0;
 }
 
 #sunset:checked ~ * {
@@ -79,7 +80,7 @@
 
 #app {
     width: 100%;
-    height: 370px;
+    height: 300px;
     padding: 0 2rem;
     display: -webkit-box;
     display: -ms-flexbox;
